@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-30T08:28:09Z",
-  "count_outdated" : 590,
-  "uniques_outdated" : 377,
-  "count" : 621,
+  "timestamp" : "2022-10-30T16:31:50Z",
+  "count_outdated" : 592,
+  "uniques_outdated" : 378,
+  "count" : 622,
   "uniques" : 394,
   "clones" : [
-    {
-      "timestamp": "2022-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-17T00:00:00Z",
       "count": 2,
