@@ -1,3 +1,11 @@
+2022-10-30T16:31:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3356218377 # 568
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 377 590 / 394 621
+* notice: next accum: outdated-unq outdated-all / unq all: 378 592 / 394 622
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-16] / []
+
 2022-10-30T08:28:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354739201 # 567
 * notice: last 14d: unq all: 3 31
